make sure footer stretches to full vw length, need to fix for media/magazine page

--- a/solucky-react-app/src/components/Footer.css
+++ b/solucky-react-app/src/components/Footer.css
@@ -5,6 +5,9 @@
     justify-content: space-evenly;
     gap: 30px;
     background-color: #030303;
+    width: 100vw;
+    align-self: stretch;
+    box-sizing: border-box;
 }
 
 .footer-card{
